--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,9 +84,9 @@ jobs:
       with:
         string: ${{ github.repository }}
 
-  build-docker-linux:
+  build-docker:
     runs-on: ${{ matrix.os }}
-    needs: [init-docker-builds]
+    needs: [init-docker-builds, set-version]
     strategy:
       matrix:
         include:
@@ -98,34 +98,23 @@ jobs:
             platform: linux/amd64
             tag: linux-x64
             file: Dockerfile
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up QEMU
-      id: qemu
-      uses: docker/setup-qemu-action@v1
-      with:
-        image: tonistiigi/binfmt:latest
-        platforms: ${{ matrix.platform }}
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - run: docker build -t ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/${{ matrix.file }} --platform ${{ matrix.platform }} .  
-    - run: docker push ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }}
-
-  build-docker-linux-armv7:
-    runs-on: ${{ matrix.os }}
-    needs: [init-docker-builds]
-    strategy:
-      matrix:
-        include:
           - os: ubuntu-latest
-            tag: linux-armv7
-            file: Dockerfile.armv7
+            platform: linux/arm/v7
+            tag: linux-arm
+            file: Dockerfile
+          - os: windows-latest
+            platform: windows/x64
+            tag: win-x64
+            file: Dockerfile
     steps:
     - uses: actions/checkout@v2
+    - name: Download portable build
+      uses: actions/download-artifact@v2
+      with:
+        name: portable
+    - run: 7z x portable/${{ github.event.repository.name }}-portable-${{ needs.set-version.outputs.version }}.zip -oapp/
     - name: Set up QEMU
+      if: runner.os <> windows
       id: qemu
       uses: docker/setup-qemu-action@v1
       with:
@@ -136,31 +125,12 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - run: docker build -t ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/${{ matrix.file }} .  
-    - run: docker push ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }}
-    
-  build-docker-windows:
-    runs-on: ${{ matrix.os }}
-    needs: [init-docker-builds]
-    strategy:
-      matrix:
-        include:
-          - os: windows-latest
-            platform: windows/amd64
-            tag: win-x64
-    steps:
-    - uses: actions/checkout@v2
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - run: docker build -t ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }} -f ./DiscordEventBot.Service/Dockerfile --platform ${{ matrix.platform }} .
+    - run: docker build -t ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }} -f ./${{ matrix.file }} --platform ${{ matrix.platform }} .  
     - run: docker push ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }}
   
   create-docker-manifest:
     runs-on: ubuntu-latest
-    needs: [init-docker-builds, build-docker-linux, build-docker-windows, build-docker-linux-armv7]
+    needs: [init-docker-builds, build-docker]
     steps:
     - name: Login to Docker Hub
       uses: docker/login-action@v1
