--- a/DiscordEventBot.Common/DiscordEventBot.Common.csproj
+++ b/DiscordEventBot.Common/DiscordEventBot.Common.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.4.0" />
     <PackageReference Include="Humanizer" Version="2.11.10" />
+    <PackageReference Include="Ical.Net.NetCore" Version="4.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
