--- a/DiscordEventBot.Service/DiscordEventBot.Service.csproj
+++ b/DiscordEventBot.Service/DiscordEventBot.Service.csproj
@@ -13,7 +13,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
+    <PackageReference Include="Quartz" Version="3.3.3" />
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
 
