--- a/DiscordEventBot.Service/DiscordEventBot.Service.csproj
+++ b/DiscordEventBot.Service/DiscordEventBot.Service.csproj
@@ -20,8 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\DiscordEventBot.Jobs\DiscordEventBot.Jobs.csproj" />
     <ProjectReference Include="..\DiscordEventBot.Common\DiscordEventBot.Common.csproj" />
+    <ProjectReference Include="..\DiscordEventBot.Jobs\DiscordEventBot.Jobs.csproj" />
     <ProjectReference Include="..\DiscordEventBot.Model\DiscordEventBot.Model.csproj" />
   </ItemGroup>
 
