--- a/DiscordEventBot.Common/DiscordEventBot.Common.csproj
+++ b/DiscordEventBot.Common/DiscordEventBot.Common.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Humanizer" Version="2.11.10" />
     <PackageReference Include="Ical.Net.NetCore" Version="4.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
