--- a/DiscordEventBot.Service/DiscordEventBot.Service.csproj
+++ b/DiscordEventBot.Service/DiscordEventBot.Service.csproj
@@ -13,12 +13,15 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DiscordEventBot.Common\DiscordEventBot.Common.csproj" />
+    <ProjectReference Include="..\DiscordEventBot.Jobs\DiscordEventBot.Jobs.csproj" />
     <ProjectReference Include="..\DiscordEventBot.Model\DiscordEventBot.Model.csproj" />
   </ItemGroup>
 
