--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
             profile: "win-x64"
           - os: windows-latest
             profile: "win-arm"
-          - os: ubuntu-latest
+          - os: macos-latest
             profile: "osx-x64"
           - os: windows-latest
             profile: "portable"
@@ -64,7 +64,7 @@ jobs:
     - name: Publish
       run: dotnet publish DiscordEventBot.sln -p:PublishProfile=${{ matrix.profile }}
     - name: Zip Output
-      run: 7z a -tzip ${{ github.event.repository.name }}-${{ matrix.profile }}-${{ needs.set-version.outputs.version }}.zip DiscordEventBot.Service/bin/Release/net6.0/publish/${{ matrix.profile }}/
+      run: 7z a -tzip ${{ github.event.repository.name }}-${{ matrix.profile }}-${{ needs.set-version.outputs.version }}.zip ./DiscordEventBot.Service/bin/Release/net6.0/publish/${{ matrix.profile }}/*
     - name: Upload
       uses: actions/upload-artifact@v2.3.1
       with:
@@ -123,8 +123,10 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - run: docker build -t ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }} -f ./${{ matrix.file }} --platform ${{ matrix.platform }} .  
-    - run: docker push ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }}
+    - name: Build docker image
+      run: docker build -t ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }} -f ./${{ matrix.file }} --platform ${{ matrix.platform }} .  
+    - name: Push docker image
+      run: docker push ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-${{ matrix.tag }}
   
   create-docker-manifest:
     runs-on: ubuntu-latest
@@ -135,8 +137,10 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - run: docker manifest create ${{ needs.init-docker-builds.outputs.docker-repo }}:latest ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-win-x64 ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-linux-arm ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-linux-x64 ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-linux-arm64
-    - run: docker manifest push ${{ needs.init-docker-builds.outputs.docker-repo }}:latest
+    - name: Create docker manifest
+      run: docker manifest create ${{ needs.init-docker-builds.outputs.docker-repo }}:latest ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-win-x64 ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-linux-arm ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-linux-x64 ${{ needs.init-docker-builds.outputs.docker-repo }}:latest-linux-arm64
+    - name: Push manifest
+      run: docker manifest push ${{ needs.init-docker-builds.outputs.docker-repo }}:latest
   
   create-release:
     runs-on: ubuntu-latest
